fix font blurriness

--- a/src/assets/styles/modules/modal.scss
+++ b/src/assets/styles/modules/modal.scss
@@ -14,7 +14,6 @@
   padding: 4em 3em 2em;
   z-index: 5;
   visibility: hidden;
-  backface-visibility: hidden;
   transition: all .2s ease-in;
 }
 
